figured out bug that was causing appending of crystal set, adjusted spacing of crystals, figured out scoring if/else if statements as well.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 }
 
 header {
+    font-family: 'Press Start 2P', cursive;
     text-align: center;
 }
 
@@ -17,7 +18,6 @@ p {
 
 img {
     width: 7rem;
-    height: 7rem;
 }
 
 footer {
